// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Schedule should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Schedule
    admin={false}
    deleteFromSchedule={[Function]}
    editSchedule={[Function]}
    event={
        Object {
            "staff": Array [
              Object {
                "role": "Bartender",
              },
              Object {
                "role": "Barback",
              },
              Object {
                "role": "Bar Manager",
              },
              Object {
                "role": "Assistant Bar Manager",
              },
            ],
          }
    }
    manualSchedule={false}
    staffList={Array []}
    updateSchedule={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="schedule-container"
>
          <h4>
                    Nov 6, 2018
          </h4>
          <h4 />
          <h4 />
</div>,
        <h2 />,
        <section
          className="staff-container"
>
          <article
                    className="managers"
          >
                    <DisplayStaff
                              admin={false}
                              deleteFromSchedule={[Function]}
                              editSchedule={[Function]}
                              event={
                                        Object {
                                                  "staff": Array [
                                                    Object {
                                                      "role": "Bartender",
                                                    },
                                                    Object {
                                                      "role": "Barback",
                                                    },
                                                    Object {
                                                      "role": "Bar Manager",
                                                    },
                                                    Object {
                                                      "role": "Assistant Bar Manager",
                                                    },
                                                  ],
                                                }
                              }
                              handleEditClick={[Function]}
                              manualSchedule={false}
                              staffList={Array []}
                              staffRole="Bar Manager"
                              updateSchedule={[Function]}
                    />
          </article>
          <DisplayStaff
                    admin={false}
                    deleteFromSchedule={[Function]}
                    editSchedule={[Function]}
                    event={
                              Object {
                                        "staff": Array [
                                          Object {
                                            "role": "Bartender",
                                          },
                                          Object {
                                            "role": "Barback",
                                          },
                                          Object {
                                            "role": "Bar Manager",
                                          },
                                          Object {
                                            "role": "Assistant Bar Manager",
                                          },
                                        ],
                                      }
                    }
                    handleEditClick={[Function]}
                    manualSchedule={false}
                    staffList={Array []}
                    staffRole="Bartender"
                    updateSchedule={[Function]}
          />
          <DisplayStaff
                    admin={false}
                    deleteFromSchedule={[Function]}
                    editSchedule={[Function]}
                    event={
                              Object {
                                        "staff": Array [
                                          Object {
                                            "role": "Bartender",
                                          },
                                          Object {
                                            "role": "Barback",
                                          },
                                          Object {
                                            "role": "Bar Manager",
                                          },
                                          Object {
                                            "role": "Assistant Bar Manager",
                                          },
                                        ],
                                      }
                    }
                    handleEditClick={[Function]}
                    manualSchedule={false}
                    staffList={Array []}
                    staffRole="Barback"
                    updateSchedule={[Function]}
          />
</section>,
        false,
      ],
      "className": "schedule-card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h4>
              Nov 6, 2018
</h4>,
            <h4 />,
            <h4 />,
          ],
          "className": "schedule-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Nov 6, 2018",
            },
            "ref": null,
            "rendered": "Nov 6, 2018",
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "h4",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <article
              className="managers"
>
              <DisplayStaff
                            admin={false}
                            deleteFromSchedule={[Function]}
                            editSchedule={[Function]}
                            event={
                                          Object {
                                                        "staff": Array [
                                                          Object {
                                                            "role": "Bartender",
                                                          },
                                                          Object {
                                                            "role": "Barback",
                                                          },
                                                          Object {
                                                            "role": "Bar Manager",
                                                          },
                                                          Object {
                                                            "role": "Assistant Bar Manager",
                                                          },
                                                        ],
                                                      }
                            }
                            handleEditClick={[Function]}
                            manualSchedule={false}
                            staffList={Array []}
                            staffRole="Bar Manager"
                            updateSchedule={[Function]}
              />
</article>,
            <DisplayStaff
              admin={false}
              deleteFromSchedule={[Function]}
              editSchedule={[Function]}
              event={
                            Object {
                                          "staff": Array [
                                            Object {
                                              "role": "Bartender",
                                            },
                                            Object {
                                              "role": "Barback",
                                            },
                                            Object {
                                              "role": "Bar Manager",
                                            },
                                            Object {
                                              "role": "Assistant Bar Manager",
                                            },
                                          ],
                                        }
              }
              handleEditClick={[Function]}
              manualSchedule={false}
              staffList={Array []}
              staffRole="Bartender"
              updateSchedule={[Function]}
/>,
            <DisplayStaff
              admin={false}
              deleteFromSchedule={[Function]}
              editSchedule={[Function]}
              event={
                            Object {
                                          "staff": Array [
                                            Object {
                                              "role": "Bartender",
                                            },
                                            Object {
                                              "role": "Barback",
                                            },
                                            Object {
                                              "role": "Bar Manager",
                                            },
                                            Object {
                                              "role": "Assistant Bar Manager",
                                            },
                                          ],
                                        }
              }
              handleEditClick={[Function]}
              manualSchedule={false}
              staffList={Array []}
              staffRole="Barback"
              updateSchedule={[Function]}
/>,
          ],
          "className": "staff-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <DisplayStaff
                  admin={false}
                  deleteFromSchedule={[Function]}
                  editSchedule={[Function]}
                  event={
                                    Object {
                                                      "staff": Array [
                                                        Object {
                                                          "role": "Bartender",
                                                        },
                                                        Object {
                                                          "role": "Barback",
                                                        },
                                                        Object {
                                                          "role": "Bar Manager",
                                                        },
                                                        Object {
                                                          "role": "Assistant Bar Manager",
                                                        },
                                                      ],
                                                    }
                  }
                  handleEditClick={[Function]}
                  manualSchedule={false}
                  staffList={Array []}
                  staffRole="Bar Manager"
                  updateSchedule={[Function]}
/>,
                undefined,
              ],
              "className": "managers",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "admin": false,
                  "deleteFromSchedule": [Function],
                  "editSchedule": [Function],
                  "event": Object {
                    "staff": Array [
                      Object {
                        "role": "Bartender",
                      },
                      Object {
                        "role": "Barback",
                      },
                      Object {
                        "role": "Bar Manager",
                      },
                      Object {
                        "role": "Assistant Bar Manager",
                      },
                    ],
                  },
                  "handleEditClick": [Function],
                  "manualSchedule": false,
                  "staffList": Array [],
                  "staffRole": "Bar Manager",
                  "updateSchedule": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              undefined,
            ],
            "type": "article",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "admin": false,
              "deleteFromSchedule": [Function],
              "editSchedule": [Function],
              "event": Object {
                "staff": Array [
                  Object {
                    "role": "Bartender",
                  },
                  Object {
                    "role": "Barback",
                  },
                  Object {
                    "role": "Bar Manager",
                  },
                  Object {
                    "role": "Assistant Bar Manager",
                  },
                ],
              },
              "handleEditClick": [Function],
              "manualSchedule": false,
              "staffList": Array [],
              "staffRole": "Bartender",
              "updateSchedule": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "admin": false,
              "deleteFromSchedule": [Function],
              "editSchedule": [Function],
              "event": Object {
                "staff": Array [
                  Object {
                    "role": "Bartender",
                  },
                  Object {
                    "role": "Barback",
                  },
                  Object {
                    "role": "Bar Manager",
                  },
                  Object {
                    "role": "Assistant Bar Manager",
                  },
                ],
              },
              "handleEditClick": [Function],
              "manualSchedule": false,
              "staffList": Array [],
              "staffRole": "Barback",
              "updateSchedule": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "section",
      },
      false,
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="schedule-container"
>
            <h4>
                        Nov 6, 2018
            </h4>
            <h4 />
            <h4 />
</div>,
          <h2 />,
          <section
            className="staff-container"
>
            <article
                        className="managers"
            >
                        <DisplayStaff
                                    admin={false}
                                    deleteFromSchedule={[Function]}
                                    editSchedule={[Function]}
                                    event={
                                                Object {
                                                            "staff": Array [
                                                              Object {
                                                                "role": "Bartender",
                                                              },
                                                              Object {
                                                                "role": "Barback",
                                                              },
                                                              Object {
                                                                "role": "Bar Manager",
                                                              },
                                                              Object {
                                                                "role": "Assistant Bar Manager",
                                                              },
                                                            ],
                                                          }
                                    }
                                    handleEditClick={[Function]}
                                    manualSchedule={false}
                                    staffList={Array []}
                                    staffRole="Bar Manager"
                                    updateSchedule={[Function]}
                        />
            </article>
            <DisplayStaff
                        admin={false}
                        deleteFromSchedule={[Function]}
                        editSchedule={[Function]}
                        event={
                                    Object {
                                                "staff": Array [
                                                  Object {
                                                    "role": "Bartender",
                                                  },
                                                  Object {
                                                    "role": "Barback",
                                                  },
                                                  Object {
                                                    "role": "Bar Manager",
                                                  },
                                                  Object {
                                                    "role": "Assistant Bar Manager",
                                                  },
                                                ],
                                              }
                        }
                        handleEditClick={[Function]}
                        manualSchedule={false}
                        staffList={Array []}
                        staffRole="Bartender"
                        updateSchedule={[Function]}
            />
            <DisplayStaff
                        admin={false}
                        deleteFromSchedule={[Function]}
                        editSchedule={[Function]}
                        event={
                                    Object {
                                                "staff": Array [
                                                  Object {
                                                    "role": "Bartender",
                                                  },
                                                  Object {
                                                    "role": "Barback",
                                                  },
                                                  Object {
                                                    "role": "Bar Manager",
                                                  },
                                                  Object {
                                                    "role": "Assistant Bar Manager",
                                                  },
                                                ],
                                              }
                        }
                        handleEditClick={[Function]}
                        manualSchedule={false}
                        staffList={Array []}
                        staffRole="Barback"
                        updateSchedule={[Function]}
            />
</section>,
          false,
        ],
        "className": "schedule-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h4>
                Nov 6, 2018
</h4>,
              <h4 />,
              <h4 />,
            ],
            "className": "schedule-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Nov 6, 2018",
              },
              "ref": null,
              "rendered": "Nov 6, 2018",
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "h4",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <article
                className="managers"
>
                <DisplayStaff
                                admin={false}
                                deleteFromSchedule={[Function]}
                                editSchedule={[Function]}
                                event={
                                                Object {
                                                                "staff": Array [
                                                                  Object {
                                                                    "role": "Bartender",
                                                                  },
                                                                  Object {
                                                                    "role": "Barback",
                                                                  },
                                                                  Object {
                                                                    "role": "Bar Manager",
                                                                  },
                                                                  Object {
                                                                    "role": "Assistant Bar Manager",
                                                                  },
                                                                ],
                                                              }
                                }
                                handleEditClick={[Function]}
                                manualSchedule={false}
                                staffList={Array []}
                                staffRole="Bar Manager"
                                updateSchedule={[Function]}
                />
</article>,
              <DisplayStaff
                admin={false}
                deleteFromSchedule={[Function]}
                editSchedule={[Function]}
                event={
                                Object {
                                                "staff": Array [
                                                  Object {
                                                    "role": "Bartender",
                                                  },
                                                  Object {
                                                    "role": "Barback",
                                                  },
                                                  Object {
                                                    "role": "Bar Manager",
                                                  },
                                                  Object {
                                                    "role": "Assistant Bar Manager",
                                                  },
                                                ],
                                              }
                }
                handleEditClick={[Function]}
                manualSchedule={false}
                staffList={Array []}
                staffRole="Bartender"
                updateSchedule={[Function]}
/>,
              <DisplayStaff
                admin={false}
                deleteFromSchedule={[Function]}
                editSchedule={[Function]}
                event={
                                Object {
                                                "staff": Array [
                                                  Object {
                                                    "role": "Bartender",
                                                  },
                                                  Object {
                                                    "role": "Barback",
                                                  },
                                                  Object {
                                                    "role": "Bar Manager",
                                                  },
                                                  Object {
                                                    "role": "Assistant Bar Manager",
                                                  },
                                                ],
                                              }
                }
                handleEditClick={[Function]}
                manualSchedule={false}
                staffList={Array []}
                staffRole="Barback"
                updateSchedule={[Function]}
/>,
            ],
            "className": "staff-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <DisplayStaff
                    admin={false}
                    deleteFromSchedule={[Function]}
                    editSchedule={[Function]}
                    event={
                                        Object {
                                                            "staff": Array [
                                                              Object {
                                                                "role": "Bartender",
                                                              },
                                                              Object {
                                                                "role": "Barback",
                                                              },
                                                              Object {
                                                                "role": "Bar Manager",
                                                              },
                                                              Object {
                                                                "role": "Assistant Bar Manager",
                                                              },
                                                            ],
                                                          }
                    }
                    handleEditClick={[Function]}
                    manualSchedule={false}
                    staffList={Array []}
                    staffRole="Bar Manager"
                    updateSchedule={[Function]}
/>,
                  undefined,
                ],
                "className": "managers",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "admin": false,
                    "deleteFromSchedule": [Function],
                    "editSchedule": [Function],
                    "event": Object {
                      "staff": Array [
                        Object {
                          "role": "Bartender",
                        },
                        Object {
                          "role": "Barback",
                        },
                        Object {
                          "role": "Bar Manager",
                        },
                        Object {
                          "role": "Assistant Bar Manager",
                        },
                      ],
                    },
                    "handleEditClick": [Function],
                    "manualSchedule": false,
                    "staffList": Array [],
                    "staffRole": "Bar Manager",
                    "updateSchedule": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                undefined,
              ],
              "type": "article",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "admin": false,
                "deleteFromSchedule": [Function],
                "editSchedule": [Function],
                "event": Object {
                  "staff": Array [
                    Object {
                      "role": "Bartender",
                    },
                    Object {
                      "role": "Barback",
                    },
                    Object {
                      "role": "Bar Manager",
                    },
                    Object {
                      "role": "Assistant Bar Manager",
                    },
                  ],
                },
                "handleEditClick": [Function],
                "manualSchedule": false,
                "staffList": Array [],
                "staffRole": "Bartender",
                "updateSchedule": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "admin": false,
                "deleteFromSchedule": [Function],
                "editSchedule": [Function],
                "event": Object {
                  "staff": Array [
                    Object {
                      "role": "Bartender",
                    },
                    Object {
                      "role": "Barback",
                    },
                    Object {
                      "role": "Bar Manager",
                    },
                    Object {
                      "role": "Assistant Bar Manager",
                    },
                  ],
                },
                "handleEditClick": [Function],
                "manualSchedule": false,
                "staffList": Array [],
                "staffRole": "Barback",
                "updateSchedule": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "section",
        },
        false,
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Schedule should match the snapshot when Ass man is needed 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Schedule
    admin={true}
    deleteFromSchedule={[Function]}
    editSchedule={[Function]}
    event={
        Object {
            "ass_bar_manager": true,
          }
    }
    manualSchedule={false}
    staffList={Array []}
    updateSchedule={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="schedule-container"
>
          <h4>
                    Nov 6, 2018
          </h4>
          <h4 />
          <h4 />
</div>,
        <h2 />,
        <section
          className="staff-container"
>
          <article
                    className="managers"
          >
                    <DisplayStaff
                              admin={true}
                              deleteFromSchedule={[Function]}
                              editSchedule={[Function]}
                              event={
                                        Object {
                                                  "ass_bar_manager": true,
                                                }
                              }
                              handleEditClick={[Function]}
                              manualSchedule={false}
                              staffList={Array []}
                              staffRole="Bar Manager"
                              updateSchedule={[Function]}
                    />
                    <DisplayStaff
                              admin={true}
                              deleteFromSchedule={[Function]}
                              editSchedule={[Function]}
                              event={
                                        Object {
                                                  "ass_bar_manager": true,
                                                }
                              }
                              handleEditClick={[Function]}
                              manualSchedule={false}
                              staffList={Array []}
                              staffRole="Assistant Bar Manager"
                              updateSchedule={[Function]}
                    />
          </article>
          <DisplayStaff
                    admin={true}
                    deleteFromSchedule={[Function]}
                    editSchedule={[Function]}
                    event={
                              Object {
                                        "ass_bar_manager": true,
                                      }
                    }
                    handleEditClick={[Function]}
                    manualSchedule={false}
                    staffList={Array []}
                    staffRole="Bartender"
                    updateSchedule={[Function]}
          />
          <DisplayStaff
                    admin={true}
                    deleteFromSchedule={[Function]}
                    editSchedule={[Function]}
                    event={
                              Object {
                                        "ass_bar_manager": true,
                                      }
                    }
                    handleEditClick={[Function]}
                    manualSchedule={false}
                    staffList={Array []}
                    staffRole="Barback"
                    updateSchedule={[Function]}
          />
</section>,
        false,
      ],
      "className": "schedule-card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h4>
              Nov 6, 2018
</h4>,
            <h4 />,
            <h4 />,
          ],
          "className": "schedule-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Nov 6, 2018",
            },
            "ref": null,
            "rendered": "Nov 6, 2018",
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "h4",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <article
              className="managers"
>
              <DisplayStaff
                            admin={true}
                            deleteFromSchedule={[Function]}
                            editSchedule={[Function]}
                            event={
                                          Object {
                                                        "ass_bar_manager": true,
                                                      }
                            }
                            handleEditClick={[Function]}
                            manualSchedule={false}
                            staffList={Array []}
                            staffRole="Bar Manager"
                            updateSchedule={[Function]}
              />
              <DisplayStaff
                            admin={true}
                            deleteFromSchedule={[Function]}
                            editSchedule={[Function]}
                            event={
                                          Object {
                                                        "ass_bar_manager": true,
                                                      }
                            }
                            handleEditClick={[Function]}
                            manualSchedule={false}
                            staffList={Array []}
                            staffRole="Assistant Bar Manager"
                            updateSchedule={[Function]}
              />
</article>,
            <DisplayStaff
              admin={true}
              deleteFromSchedule={[Function]}
              editSchedule={[Function]}
              event={
                            Object {
                                          "ass_bar_manager": true,
                                        }
              }
              handleEditClick={[Function]}
              manualSchedule={false}
              staffList={Array []}
              staffRole="Bartender"
              updateSchedule={[Function]}
/>,
            <DisplayStaff
              admin={true}
              deleteFromSchedule={[Function]}
              editSchedule={[Function]}
              event={
                            Object {
                                          "ass_bar_manager": true,
                                        }
              }
              handleEditClick={[Function]}
              manualSchedule={false}
              staffList={Array []}
              staffRole="Barback"
              updateSchedule={[Function]}
/>,
          ],
          "className": "staff-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <DisplayStaff
                  admin={true}
                  deleteFromSchedule={[Function]}
                  editSchedule={[Function]}
                  event={
                                    Object {
                                                      "ass_bar_manager": true,
                                                    }
                  }
                  handleEditClick={[Function]}
                  manualSchedule={false}
                  staffList={Array []}
                  staffRole="Bar Manager"
                  updateSchedule={[Function]}
/>,
                <DisplayStaff
                  admin={true}
                  deleteFromSchedule={[Function]}
                  editSchedule={[Function]}
                  event={
                                    Object {
                                                      "ass_bar_manager": true,
                                                    }
                  }
                  handleEditClick={[Function]}
                  manualSchedule={false}
                  staffList={Array []}
                  staffRole="Assistant Bar Manager"
                  updateSchedule={[Function]}
/>,
              ],
              "className": "managers",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "admin": true,
                  "deleteFromSchedule": [Function],
                  "editSchedule": [Function],
                  "event": Object {
                    "ass_bar_manager": true,
                  },
                  "handleEditClick": [Function],
                  "manualSchedule": false,
                  "staffList": Array [],
                  "staffRole": "Bar Manager",
                  "updateSchedule": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "admin": true,
                  "deleteFromSchedule": [Function],
                  "editSchedule": [Function],
                  "event": Object {
                    "ass_bar_manager": true,
                  },
                  "handleEditClick": [Function],
                  "manualSchedule": false,
                  "staffList": Array [],
                  "staffRole": "Assistant Bar Manager",
                  "updateSchedule": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "article",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "admin": true,
              "deleteFromSchedule": [Function],
              "editSchedule": [Function],
              "event": Object {
                "ass_bar_manager": true,
              },
              "handleEditClick": [Function],
              "manualSchedule": false,
              "staffList": Array [],
              "staffRole": "Bartender",
              "updateSchedule": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "admin": true,
              "deleteFromSchedule": [Function],
              "editSchedule": [Function],
              "event": Object {
                "ass_bar_manager": true,
              },
              "handleEditClick": [Function],
              "manualSchedule": false,
              "staffList": Array [],
              "staffRole": "Barback",
              "updateSchedule": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "section",
      },
      false,
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="schedule-container"
>
            <h4>
                        Nov 6, 2018
            </h4>
            <h4 />
            <h4 />
</div>,
          <h2 />,
          <section
            className="staff-container"
>
            <article
                        className="managers"
            >
                        <DisplayStaff
                                    admin={true}
                                    deleteFromSchedule={[Function]}
                                    editSchedule={[Function]}
                                    event={
                                                Object {
                                                            "ass_bar_manager": true,
                                                          }
                                    }
                                    handleEditClick={[Function]}
                                    manualSchedule={false}
                                    staffList={Array []}
                                    staffRole="Bar Manager"
                                    updateSchedule={[Function]}
                        />
                        <DisplayStaff
                                    admin={true}
                                    deleteFromSchedule={[Function]}
                                    editSchedule={[Function]}
                                    event={
                                                Object {
                                                            "ass_bar_manager": true,
                                                          }
                                    }
                                    handleEditClick={[Function]}
                                    manualSchedule={false}
                                    staffList={Array []}
                                    staffRole="Assistant Bar Manager"
                                    updateSchedule={[Function]}
                        />
            </article>
            <DisplayStaff
                        admin={true}
                        deleteFromSchedule={[Function]}
                        editSchedule={[Function]}
                        event={
                                    Object {
                                                "ass_bar_manager": true,
                                              }
                        }
                        handleEditClick={[Function]}
                        manualSchedule={false}
                        staffList={Array []}
                        staffRole="Bartender"
                        updateSchedule={[Function]}
            />
            <DisplayStaff
                        admin={true}
                        deleteFromSchedule={[Function]}
                        editSchedule={[Function]}
                        event={
                                    Object {
                                                "ass_bar_manager": true,
                                              }
                        }
                        handleEditClick={[Function]}
                        manualSchedule={false}
                        staffList={Array []}
                        staffRole="Barback"
                        updateSchedule={[Function]}
            />
</section>,
          false,
        ],
        "className": "schedule-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h4>
                Nov 6, 2018
</h4>,
              <h4 />,
              <h4 />,
            ],
            "className": "schedule-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Nov 6, 2018",
              },
              "ref": null,
              "rendered": "Nov 6, 2018",
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "h4",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <article
                className="managers"
>
                <DisplayStaff
                                admin={true}
                                deleteFromSchedule={[Function]}
                                editSchedule={[Function]}
                                event={
                                                Object {
                                                                "ass_bar_manager": true,
                                                              }
                                }
                                handleEditClick={[Function]}
                                manualSchedule={false}
                                staffList={Array []}
                                staffRole="Bar Manager"
                                updateSchedule={[Function]}
                />
                <DisplayStaff
                                admin={true}
                                deleteFromSchedule={[Function]}
                                editSchedule={[Function]}
                                event={
                                                Object {
                                                                "ass_bar_manager": true,
                                                              }
                                }
                                handleEditClick={[Function]}
                                manualSchedule={false}
                                staffList={Array []}
                                staffRole="Assistant Bar Manager"
                                updateSchedule={[Function]}
                />
</article>,
              <DisplayStaff
                admin={true}
                deleteFromSchedule={[Function]}
                editSchedule={[Function]}
                event={
                                Object {
                                                "ass_bar_manager": true,
                                              }
                }
                handleEditClick={[Function]}
                manualSchedule={false}
                staffList={Array []}
                staffRole="Bartender"
                updateSchedule={[Function]}
/>,
              <DisplayStaff
                admin={true}
                deleteFromSchedule={[Function]}
                editSchedule={[Function]}
                event={
                                Object {
                                                "ass_bar_manager": true,
                                              }
                }
                handleEditClick={[Function]}
                manualSchedule={false}
                staffList={Array []}
                staffRole="Barback"
                updateSchedule={[Function]}
/>,
            ],
            "className": "staff-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <DisplayStaff
                    admin={true}
                    deleteFromSchedule={[Function]}
                    editSchedule={[Function]}
                    event={
                                        Object {
                                                            "ass_bar_manager": true,
                                                          }
                    }
                    handleEditClick={[Function]}
                    manualSchedule={false}
                    staffList={Array []}
                    staffRole="Bar Manager"
                    updateSchedule={[Function]}
/>,
                  <DisplayStaff
                    admin={true}
                    deleteFromSchedule={[Function]}
                    editSchedule={[Function]}
                    event={
                                        Object {
                                                            "ass_bar_manager": true,
                                                          }
                    }
                    handleEditClick={[Function]}
                    manualSchedule={false}
                    staffList={Array []}
                    staffRole="Assistant Bar Manager"
                    updateSchedule={[Function]}
/>,
                ],
                "className": "managers",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "admin": true,
                    "deleteFromSchedule": [Function],
                    "editSchedule": [Function],
                    "event": Object {
                      "ass_bar_manager": true,
                    },
                    "handleEditClick": [Function],
                    "manualSchedule": false,
                    "staffList": Array [],
                    "staffRole": "Bar Manager",
                    "updateSchedule": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "admin": true,
                    "deleteFromSchedule": [Function],
                    "editSchedule": [Function],
                    "event": Object {
                      "ass_bar_manager": true,
                    },
                    "handleEditClick": [Function],
                    "manualSchedule": false,
                    "staffList": Array [],
                    "staffRole": "Assistant Bar Manager",
                    "updateSchedule": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "article",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "admin": true,
                "deleteFromSchedule": [Function],
                "editSchedule": [Function],
                "event": Object {
                  "ass_bar_manager": true,
                },
                "handleEditClick": [Function],
                "manualSchedule": false,
                "staffList": Array [],
                "staffRole": "Bartender",
                "updateSchedule": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "admin": true,
                "deleteFromSchedule": [Function],
                "editSchedule": [Function],
                "event": Object {
                  "ass_bar_manager": true,
                },
                "handleEditClick": [Function],
                "manualSchedule": false,
                "staffList": Array [],
                "staffRole": "Barback",
                "updateSchedule": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "section",
        },
        false,
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Schedule should match the snapshot when admin is true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Schedule
    admin={true}
    deleteFromSchedule={[Function]}
    editSchedule={[Function]}
    event={
        Object {
            "staff": Array [
              Object {
                "role": "Bartender",
              },
              Object {
                "role": "Barback",
              },
              Object {
                "role": "Bar Manager",
              },
              Object {
                "role": "Assistant Bar Manager",
              },
            ],
          }
    }
    manualSchedule={false}
    staffList={Array []}
    updateSchedule={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="schedule-container"
>
          <h4>
                    Nov 6, 2018
          </h4>
          <h4 />
          <h4 />
</div>,
        <h2 />,
        <section
          className="staff-container"
>
          <article
                    className="managers"
          >
                    <DisplayStaff
                              admin={true}
                              deleteFromSchedule={[Function]}
                              editSchedule={[Function]}
                              event={
                                        Object {
                                                  "staff": Array [
                                                    Object {
                                                      "role": "Bartender",
                                                    },
                                                    Object {
                                                      "role": "Barback",
                                                    },
                                                    Object {
                                                      "role": "Bar Manager",
                                                    },
                                                    Object {
                                                      "role": "Assistant Bar Manager",
                                                    },
                                                  ],
                                                }
                              }
                              handleEditClick={[Function]}
                              manualSchedule={false}
                              staffList={Array []}
                              staffRole="Bar Manager"
                              updateSchedule={[Function]}
                    />
          </article>
          <DisplayStaff
                    admin={true}
                    deleteFromSchedule={[Function]}
                    editSchedule={[Function]}
                    event={
                              Object {
                                        "staff": Array [
                                          Object {
                                            "role": "Bartender",
                                          },
                                          Object {
                                            "role": "Barback",
                                          },
                                          Object {
                                            "role": "Bar Manager",
                                          },
                                          Object {
                                            "role": "Assistant Bar Manager",
                                          },
                                        ],
                                      }
                    }
                    handleEditClick={[Function]}
                    manualSchedule={false}
                    staffList={Array []}
                    staffRole="Bartender"
                    updateSchedule={[Function]}
          />
          <DisplayStaff
                    admin={true}
                    deleteFromSchedule={[Function]}
                    editSchedule={[Function]}
                    event={
                              Object {
                                        "staff": Array [
                                          Object {
                                            "role": "Bartender",
                                          },
                                          Object {
                                            "role": "Barback",
                                          },
                                          Object {
                                            "role": "Bar Manager",
                                          },
                                          Object {
                                            "role": "Assistant Bar Manager",
                                          },
                                        ],
                                      }
                    }
                    handleEditClick={[Function]}
                    manualSchedule={false}
                    staffList={Array []}
                    staffRole="Barback"
                    updateSchedule={[Function]}
          />
</section>,
        false,
      ],
      "className": "schedule-card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h4>
              Nov 6, 2018
</h4>,
            <h4 />,
            <h4 />,
          ],
          "className": "schedule-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Nov 6, 2018",
            },
            "ref": null,
            "rendered": "Nov 6, 2018",
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "h4",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <article
              className="managers"
>
              <DisplayStaff
                            admin={true}
                            deleteFromSchedule={[Function]}
                            editSchedule={[Function]}
                            event={
                                          Object {
                                                        "staff": Array [
                                                          Object {
                                                            "role": "Bartender",
                                                          },
                                                          Object {
                                                            "role": "Barback",
                                                          },
                                                          Object {
                                                            "role": "Bar Manager",
                                                          },
                                                          Object {
                                                            "role": "Assistant Bar Manager",
                                                          },
                                                        ],
                                                      }
                            }
                            handleEditClick={[Function]}
                            manualSchedule={false}
                            staffList={Array []}
                            staffRole="Bar Manager"
                            updateSchedule={[Function]}
              />
</article>,
            <DisplayStaff
              admin={true}
              deleteFromSchedule={[Function]}
              editSchedule={[Function]}
              event={
                            Object {
                                          "staff": Array [
                                            Object {
                                              "role": "Bartender",
                                            },
                                            Object {
                                              "role": "Barback",
                                            },
                                            Object {
                                              "role": "Bar Manager",
                                            },
                                            Object {
                                              "role": "Assistant Bar Manager",
                                            },
                                          ],
                                        }
              }
              handleEditClick={[Function]}
              manualSchedule={false}
              staffList={Array []}
              staffRole="Bartender"
              updateSchedule={[Function]}
/>,
            <DisplayStaff
              admin={true}
              deleteFromSchedule={[Function]}
              editSchedule={[Function]}
              event={
                            Object {
                                          "staff": Array [
                                            Object {
                                              "role": "Bartender",
                                            },
                                            Object {
                                              "role": "Barback",
                                            },
                                            Object {
                                              "role": "Bar Manager",
                                            },
                                            Object {
                                              "role": "Assistant Bar Manager",
                                            },
                                          ],
                                        }
              }
              handleEditClick={[Function]}
              manualSchedule={false}
              staffList={Array []}
              staffRole="Barback"
              updateSchedule={[Function]}
/>,
          ],
          "className": "staff-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <DisplayStaff
                  admin={true}
                  deleteFromSchedule={[Function]}
                  editSchedule={[Function]}
                  event={
                                    Object {
                                                      "staff": Array [
                                                        Object {
                                                          "role": "Bartender",
                                                        },
                                                        Object {
                                                          "role": "Barback",
                                                        },
                                                        Object {
                                                          "role": "Bar Manager",
                                                        },
                                                        Object {
                                                          "role": "Assistant Bar Manager",
                                                        },
                                                      ],
                                                    }
                  }
                  handleEditClick={[Function]}
                  manualSchedule={false}
                  staffList={Array []}
                  staffRole="Bar Manager"
                  updateSchedule={[Function]}
/>,
                undefined,
              ],
              "className": "managers",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "admin": true,
                  "deleteFromSchedule": [Function],
                  "editSchedule": [Function],
                  "event": Object {
                    "staff": Array [
                      Object {
                        "role": "Bartender",
                      },
                      Object {
                        "role": "Barback",
                      },
                      Object {
                        "role": "Bar Manager",
                      },
                      Object {
                        "role": "Assistant Bar Manager",
                      },
                    ],
                  },
                  "handleEditClick": [Function],
                  "manualSchedule": false,
                  "staffList": Array [],
                  "staffRole": "Bar Manager",
                  "updateSchedule": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              undefined,
            ],
            "type": "article",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "admin": true,
              "deleteFromSchedule": [Function],
              "editSchedule": [Function],
              "event": Object {
                "staff": Array [
                  Object {
                    "role": "Bartender",
                  },
                  Object {
                    "role": "Barback",
                  },
                  Object {
                    "role": "Bar Manager",
                  },
                  Object {
                    "role": "Assistant Bar Manager",
                  },
                ],
              },
              "handleEditClick": [Function],
              "manualSchedule": false,
              "staffList": Array [],
              "staffRole": "Bartender",
              "updateSchedule": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "admin": true,
              "deleteFromSchedule": [Function],
              "editSchedule": [Function],
              "event": Object {
                "staff": Array [
                  Object {
                    "role": "Bartender",
                  },
                  Object {
                    "role": "Barback",
                  },
                  Object {
                    "role": "Bar Manager",
                  },
                  Object {
                    "role": "Assistant Bar Manager",
                  },
                ],
              },
              "handleEditClick": [Function],
              "manualSchedule": false,
              "staffList": Array [],
              "staffRole": "Barback",
              "updateSchedule": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "section",
      },
      false,
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="schedule-container"
>
            <h4>
                        Nov 6, 2018
            </h4>
            <h4 />
            <h4 />
</div>,
          <h2 />,
          <section
            className="staff-container"
>
            <article
                        className="managers"
            >
                        <DisplayStaff
                                    admin={true}
                                    deleteFromSchedule={[Function]}
                                    editSchedule={[Function]}
                                    event={
                                                Object {
                                                            "staff": Array [
                                                              Object {
                                                                "role": "Bartender",
                                                              },
                                                              Object {
                                                                "role": "Barback",
                                                              },
                                                              Object {
                                                                "role": "Bar Manager",
                                                              },
                                                              Object {
                                                                "role": "Assistant Bar Manager",
                                                              },
                                                            ],
                                                          }
                                    }
                                    handleEditClick={[Function]}
                                    manualSchedule={false}
                                    staffList={Array []}
                                    staffRole="Bar Manager"
                                    updateSchedule={[Function]}
                        />
            </article>
            <DisplayStaff
                        admin={true}
                        deleteFromSchedule={[Function]}
                        editSchedule={[Function]}
                        event={
                                    Object {
                                                "staff": Array [
                                                  Object {
                                                    "role": "Bartender",
                                                  },
                                                  Object {
                                                    "role": "Barback",
                                                  },
                                                  Object {
                                                    "role": "Bar Manager",
                                                  },
                                                  Object {
                                                    "role": "Assistant Bar Manager",
                                                  },
                                                ],
                                              }
                        }
                        handleEditClick={[Function]}
                        manualSchedule={false}
                        staffList={Array []}
                        staffRole="Bartender"
                        updateSchedule={[Function]}
            />
            <DisplayStaff
                        admin={true}
                        deleteFromSchedule={[Function]}
                        editSchedule={[Function]}
                        event={
                                    Object {
                                                "staff": Array [
                                                  Object {
                                                    "role": "Bartender",
                                                  },
                                                  Object {
                                                    "role": "Barback",
                                                  },
                                                  Object {
                                                    "role": "Bar Manager",
                                                  },
                                                  Object {
                                                    "role": "Assistant Bar Manager",
                                                  },
                                                ],
                                              }
                        }
                        handleEditClick={[Function]}
                        manualSchedule={false}
                        staffList={Array []}
                        staffRole="Barback"
                        updateSchedule={[Function]}
            />
</section>,
          false,
        ],
        "className": "schedule-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h4>
                Nov 6, 2018
</h4>,
              <h4 />,
              <h4 />,
            ],
            "className": "schedule-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Nov 6, 2018",
              },
              "ref": null,
              "rendered": "Nov 6, 2018",
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "h4",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <article
                className="managers"
>
                <DisplayStaff
                                admin={true}
                                deleteFromSchedule={[Function]}
                                editSchedule={[Function]}
                                event={
                                                Object {
                                                                "staff": Array [
                                                                  Object {
                                                                    "role": "Bartender",
                                                                  },
                                                                  Object {
                                                                    "role": "Barback",
                                                                  },
                                                                  Object {
                                                                    "role": "Bar Manager",
                                                                  },
                                                                  Object {
                                                                    "role": "Assistant Bar Manager",
                                                                  },
                                                                ],
                                                              }
                                }
                                handleEditClick={[Function]}
                                manualSchedule={false}
                                staffList={Array []}
                                staffRole="Bar Manager"
                                updateSchedule={[Function]}
                />
</article>,
              <DisplayStaff
                admin={true}
                deleteFromSchedule={[Function]}
                editSchedule={[Function]}
                event={
                                Object {
                                                "staff": Array [
                                                  Object {
                                                    "role": "Bartender",
                                                  },
                                                  Object {
                                                    "role": "Barback",
                                                  },
                                                  Object {
                                                    "role": "Bar Manager",
                                                  },
                                                  Object {
                                                    "role": "Assistant Bar Manager",
                                                  },
                                                ],
                                              }
                }
                handleEditClick={[Function]}
                manualSchedule={false}
                staffList={Array []}
                staffRole="Bartender"
                updateSchedule={[Function]}
/>,
              <DisplayStaff
                admin={true}
                deleteFromSchedule={[Function]}
                editSchedule={[Function]}
                event={
                                Object {
                                                "staff": Array [
                                                  Object {
                                                    "role": "Bartender",
                                                  },
                                                  Object {
                                                    "role": "Barback",
                                                  },
                                                  Object {
                                                    "role": "Bar Manager",
                                                  },
                                                  Object {
                                                    "role": "Assistant Bar Manager",
                                                  },
                                                ],
                                              }
                }
                handleEditClick={[Function]}
                manualSchedule={false}
                staffList={Array []}
                staffRole="Barback"
                updateSchedule={[Function]}
/>,
            ],
            "className": "staff-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <DisplayStaff
                    admin={true}
                    deleteFromSchedule={[Function]}
                    editSchedule={[Function]}
                    event={
                                        Object {
                                                            "staff": Array [
                                                              Object {
                                                                "role": "Bartender",
                                                              },
                                                              Object {
                                                                "role": "Barback",
                                                              },
                                                              Object {
                                                                "role": "Bar Manager",
                                                              },
                                                              Object {
                                                                "role": "Assistant Bar Manager",
                                                              },
                                                            ],
                                                          }
                    }
                    handleEditClick={[Function]}
                    manualSchedule={false}
                    staffList={Array []}
                    staffRole="Bar Manager"
                    updateSchedule={[Function]}
/>,
                  undefined,
                ],
                "className": "managers",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "admin": true,
                    "deleteFromSchedule": [Function],
                    "editSchedule": [Function],
                    "event": Object {
                      "staff": Array [
                        Object {
                          "role": "Bartender",
                        },
                        Object {
                          "role": "Barback",
                        },
                        Object {
                          "role": "Bar Manager",
                        },
                        Object {
                          "role": "Assistant Bar Manager",
                        },
                      ],
                    },
                    "handleEditClick": [Function],
                    "manualSchedule": false,
                    "staffList": Array [],
                    "staffRole": "Bar Manager",
                    "updateSchedule": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                undefined,
              ],
              "type": "article",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "admin": true,
                "deleteFromSchedule": [Function],
                "editSchedule": [Function],
                "event": Object {
                  "staff": Array [
                    Object {
                      "role": "Bartender",
                    },
                    Object {
                      "role": "Barback",
                    },
                    Object {
                      "role": "Bar Manager",
                    },
                    Object {
                      "role": "Assistant Bar Manager",
                    },
                  ],
                },
                "handleEditClick": [Function],
                "manualSchedule": false,
                "staffList": Array [],
                "staffRole": "Bartender",
                "updateSchedule": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "admin": true,
                "deleteFromSchedule": [Function],
                "editSchedule": [Function],
                "event": Object {
                  "staff": Array [
                    Object {
                      "role": "Bartender",
                    },
                    Object {
                      "role": "Barback",
                    },
                    Object {
                      "role": "Bar Manager",
                    },
                    Object {
                      "role": "Assistant Bar Manager",
                    },
                  ],
                },
                "handleEditClick": [Function],
                "manualSchedule": false,
                "staffList": Array [],
                "staffRole": "Barback",
                "updateSchedule": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "section",
        },
        false,
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
